--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,7 +66,9 @@
         "tuple": "cpp",
         "type_traits": "cpp",
         "typeinfo": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "__tree": "cpp",
+        "set": "cpp"
     },
     "python.pythonPath": "/usr/local/bin/python3"
 }
