update division operator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.10)
 set(CMAKE_CXX_STANDARD 17)
 Project(Polinomial)
 
-add_executable( Poly src/main.cpp )
+
+file(GLOB project_SRCS src/tmp.cpp src/util.cpp)
+
+add_executable( Poly ${project_SRCS} )
 
 
