meeting issue recorded

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,6 @@ cmake_minimum_required(VERSION 3.10)
 set(CMAKE_CXX_STANDARD 17)
 Project(Polinomial)
 
-
-file(GLOB project_SRCS src/tmp.cpp src/util.cpp)
-
-add_executable( Poly ${project_SRCS} )
+add_executable( Poly src/main.cpp )
 
 
