--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ include_directories("/usr/local/Cellar/boost/1.75.0_1/include")
 
 add_executable(Poly src/main.cpp ) 
 add_executable(Tylor src/tylortest.cpp)
+add_executable(Time src/timetest.cpp)
